@@ -1393,6 +1393,13 @@ n_A_MaxHP += SkillSearch(156) * 200;
 	if(EquipNumSearch(654))
 		n_A_HIT += Math.floor(SU_AGI / 10);
 
+	/*
+		ZoneSoldier - 2018-06-06
+		Add 1 HIT for every 2 LUK.
+	*/
+	if(EquipNumSearch(1627))
+		n_A_Hit += Math.floor(SU_LUK / 2);
+
 	if(n_A_ActiveSkill==324)
 		n_A_HIT += 20;
 
@@ -2026,7 +2033,7 @@ n_A_MaxHP += SkillSearch(156) * 200;
 		Custom =[Entweihen Hairband]+[Dark Thorn Staff] combo
 		[Refine Rate 5~10 Dark Thorn Staff]
   	For every 2 refines on the Dark Thorn Staff, add +10 MATK
-		[ZoneSoldier] - 2018/05/06 
+		[ZoneSoldier] - 2018/05/06
 	*/
 	if(n_A_Weapon_ATKplus >= 5 && EquipNumSearch(1621)) {
 			n_A_MATK[0] += 10 * Math.floor((n_A_Weapon_ATKplus - 4)/2);
