@@ -1,7 +1,13 @@
 [Update 2018-06-06]
 - Issue #128: Added GMC Bosses; [Natwarra/Kato]
 - Issue #123: Added Valhalla Seal; [Kato]
-- Added new 2 Regions for mobs, Seals and GMC; [Kato] 
+- Added new 2 Regions for mobs, Seals and GMC; [Kato]
+- Issue #67 Added Enhanced Variant Shoes; [ZoneSoldier]
+- Issue #78 Added Rosevine whip item, added Wink of Charm to skillOBJ and created a AutoSpellSKill # with comments; [ZoneSoldier]
+- Issue #80 Added Scarletto Nail; [ZoneSoldier]
+- Issue #82 Added Chrome Metal Sword [ZoneSoldier]
+- Issue #83 Changed a value Chrome Metal Two-Handed Sword; [ZoneSoldier]
+-
 
 [Update 2018-06-05]
 - Added Bone Hat in Electric Guitar (old normal) ID; [zoneSoldier/Kato];
@@ -12,8 +18,8 @@
 - Issue #89: Added Little Fatum Card; [Kato]
 - Issue #63: Added Detale Card; [Kato]
 - Issue #36: Added [Entweihen Hairband]+[Dark Thorn Staff] Combo with refine modifier; [ZoneSoldier]
-- Fixed all the "Unrefinable" descritions on Eden Items to show up as Red Font
-- 
+- Fixed all the "Unrefinable" descritions on Eden Items to show up as Red Font; [ZoneSoldier]
+-
 
 [Update 2018-06-04]
 - Fixed mobdb link to tRO's website; [Kato]
